--- a/src/ScaleUnitSample/CommerceRuntime/CommerceRuntime.csproj
+++ b/src/ScaleUnitSample/CommerceRuntime/CommerceRuntime.csproj
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Dynamics.Commerce.Sdk.Runtime" Version="$(CommerceSdkPackagesVersion)" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 </Project>
